--- a/.github/workflows/bohr.yml
+++ b/.github/workflows/bohr.yml
@@ -9,6 +9,7 @@ jobs:
     name: Deploy on bohr.io
     runs-on: ubuntu-latest
     steps:
+      - uses: dcodeIO/setup-node-nvm@v4
       - uses: actions/checkout@v3
       - uses: bohr-io/action@main
         with:
